# drum-practice

./: .gitignore  README.md  THIRD_PARTY_NOTICES.md  TODO.md  build.gradle.kts  gradle.properties  local.properties.example  project_structure.md  settings.gradle.kts
.cursor/rules/: debug.mdc
composeApp/: build.gradle.kts
composeApp/src/androidMain/: AndroidManifest.xml
composeApp/src/androidMain/assets/: verovio-sample.musicxml
composeApp/src/androidMain/cpp/: CMakeLists.txt  verovio_wrap.cxx
composeApp/src/androidMain/res/drawable/: ic_launcher.xml
composeApp/src/commonMain/composeResources/files/accent_practice/: accent_1_1.musicxml  accent_1_2.musicxml  accent_1_3.musicxml  accent_1_4.musicxml  accent_2_12.musicxml  accent_2_13.musicxml  accent_2_14.musicxml  accent_2_23.musicxml  accent_2_24.musicxml  accent_2_34.musicxml  accent_3_123.musicxml  accent_3_124.musicxml  accent_3_134.musicxml  accent_3_234.musicxml  accent_4_1234.musicxml
composeApp/src/commonMain/composeResources/files/random_practice/: fill_01.musicxml  fill_02.musicxml  rhythmic_01.musicxml  rhythmic_02.musicxml
composeApp/src/commonMain/composeResources/files/separation_practice/: separation_practice_1_1.musicxml  separation_practice_1_2.musicxml  separation_practice_1_3.musicxml  (+27 more)
docs/: WebView池化与预热方案.md  数据库方案说明.md  节拍器方案说明.md
docs/research/: musicxml-player-android.md
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
scripts/: generate_metronome_wavs.py
shared/src/androidMain/: AndroidManifest.xml
webassets/: README.md  package.json
(+153 files in other folders)
